--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,11 @@ server {
     listen 80;
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
+    location /api {
+        proxy_pass http://APP_ENDPOINT;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+    }
     location / {
         # root를 /usr/share/nginx/html 을 바라보게 했으므로(Dockerfile 참고)
         # 해당 경로 아래에 배포해주면 됨
